[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/objects/Tutorial1.gd" type="Script" id=1]
[ext_resource path="res://src/ui/theme_font.tres" type="Theme" id=2]
[ext_resource path="res://assets/objects/tutorial_background.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 143.95

[sub_resource type="Animation" id=2]
resource_name = "Show_text"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/tutorial_background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.862745 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/tutorial_background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Tutorial1" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="tutorial_background" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -73.5
margin_top = -38.75
margin_right = 73.5
margin_bottom = -2.75
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial_text" type="Label" parent="CanvasLayer/tutorial_background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = -11.5
margin_right = 76.5
margin_bottom = 11.5
theme = ExtResource( 2 )
text = "Kill worm 
to exit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial_area" type="Area2D" parent="."]
collision_layer = 0

[node name="tutorial_collision" type="CollisionShape2D" parent="tutorial_area"]
position = Vector2( 76.9889, 88.1007 )
shape = SubResource( 1 )

[node name="tutorial_animation" type="AnimationPlayer" parent="."]
anims/Show_text = SubResource( 2 )

[connection signal="body_entered" from="tutorial_area" to="." method="_on_tutorial_area_body_entered"]
